--- a/src/pages/messages/messages.html
+++ b/src/pages/messages/messages.html
@@ -7,12 +7,24 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>messagesPage</ion-title>
+    <ion-title>Messages</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+
+  <ion-list>
+    <button ion-button round float-right (click)="newMessageClick()" class="newMsg">
+      New Message
+    </button>
+
+    <ion-item class = "fromUser">
+
+    </ion-item>
+
+    
+  </ion-list>
 
 </ion-content>
