--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,15 +5,12 @@
   Ionic pages and navigation.
 -->
 
-<ion-header no-border>
-    <ion-navbar transparent>
-      <button ion-button small float-left>
-        <ion-icon name="menu" color="primary"></ion-icon>
-      </button>
-      <ion-title center>Mapster</ion-title>
-    </ion-navbar>
-  </ion-header>
+<ion-header>
+  <ion-navbar>
+    <ion-title center>Mapster</ion-title>
+  </ion-navbar>
+</ion-header>
 
-<ion-content fullscreen padding>
+<ion-content>
 
 </ion-content>
